# cloudclean

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  tests.json  tests3.json
evaltest/: combination1.json  combination2.json  combination3.json  tests.json  tests2.json
evaltest2/: downsample-features.json  features.json  omit-eigen.json  ordered-features2.json  tests.json  time-test.json  timing-test.json  treetest2.json  treetest4.json  treetest5.json  treetest6.json  treetest7.json
evaltest2/del/: combinations.json  combo-features (copy).json  combo-features.json
plugintool/: README.md  setup.py
plugintool/plugintool/: createplugin.py
plugintool/plugintool/filter/: template.cpp  template.h  template.qrc
plugintool/plugintool/interactive/: CMakeLists.txt  template.cpp  template.h
plugintool/plugintool/template/: template.cpp  template.h  template.json
scansubsample/: subsample  subsample.cpp
src/: CMakeLists.txt  app.cpp  app.h  appinfo.h  cloudclean.rc  glheaders.h  main.cpp
src/commands/: CMakeLists.txt  export.h  layerdelete.cpp  layerdelete.h  layerfromlabels.cpp  layerfromlabels.h  layerguiselect.cpp  layerguiselect.h  newlayer.cpp  newlayer.h  select.cpp  select.h
src/gui/: CMakeLists.txt  camera.cpp  camera.h  cloudgldata.cpp  cloudgldata.h  cloudlistview.cpp  cloudlistview.h  cloudlistview.ui  export.h  flatview.cpp  flatview.h  gldata.cpp  gldata.h  glwidget.cpp  glwidget.h  layerlistview.cpp  layerlistview.h  layerlistview.ui  leaplistener.cpp  leaplistener.h  mainwindow.cpp  mainwindow.h
src/gui/resources/: CMakeLists.txt  bg.fs.glsl  bg.vs.glsl  flatview.fs.glsl  flatview.gs.glsl  flatview.vs.glsl  icons.txt  picking.frag  picking.vert  points.frag  points.vert  resources.qrc
src/model/: CMakeLists.txt  cloudlist.cpp  cloudlist.h  export.h  layer.cpp  layer.h  layerlist.cpp  layerlist.h  pointcloud.cpp  pointcloud.h
src/plugins/: CMakeLists.txt
src/plugins/accuracy/: CMakeLists.txt  accuracy.cpp  accuracy.h  accuracy.json  accuracy.qrc  export.h
src/plugins/autotest/: CMakeLists.txt  autotest.cpp  autotest.h  autotest.json  autotest.qrc
src/plugins/brush3d/: CMakeLists.txt  basic.vert  brush3d.cpp  brush3d.h  brush3d.json  brush3d_resources.qrc
src/plugins/camerasetter/: CMakeLists.txt  camerasetter.cpp  camerasetter.h  camerasetter.json  camerasetter.qrc
src/plugins/compare/: CMakeLists.txt  compare.cpp  compare.h  compare.json  compare.qrc
src/plugins/eigenratio/: CMakeLists.txt  eigenratio.cpp  eigenratio.h  eigenratio.json  eigenratio.qrc
src/plugins/evaluate/: CMakeLists.txt  convexhull.cpp  convexhull.h  evaluate.cpp  evaluate.h  evaluate.json  evaluate.qrc
src/plugins/featureeval/: CMakeLists.txt  export.h  featureeval.cpp  featureeval.h  featureeval.json  featureeval.qrc  gridsearch.h  utils.cpp  utils.h
src/plugins/flood/: CMakeLists.txt  flood.cpp  flood.h  flood.json  flood_resources.qrc
src/plugins/graphcut/: CMakeLists.txt  graph.gs.glsl  graph.vs.glsl  graphcut.cpp  graphcut.h  graphcut.json  graphcut_resources.qrc  mincut.cpp  mincut.h
src/plugins/lasso3d/: CMakeLists.txt  lasso3d.cpp  lasso3d.h  lasso3d.json  lasso3d_resources.qrc
src/plugins/markov/: CMakeLists.txt  export.h  featurelist.cpp  featurelist.h  markov.cpp  markov.h  markov.json  markov.qrc  mincut.cpp  mincut.h
src/plugins/morphology/: CMakeLists.txt  morphology.cpp  morphology.h  morphology.json  morphology.qrc
src/plugins/normalestimation/: CMakeLists.txt  export.h  normalestimation.cpp  normalestimation.h  normalestimation.json
src/plugins/outlierfilter/: CMakeLists.txt  outlierfilter.cpp  outlierfilter.h  outlierfilter.json  outlierfilter.qrc
src/plugins/project/: CMakeLists.txt  export.h  project.cpp  project.h  project.json  project.qrc
src/plugins/radiusfilter/: CMakeLists.txt  radiusfilter.cpp  radiusfilter.h  radiusfilter.json  radiusfilter.qrc
src/plugins/register/: CMakeLists.txt  register.cpp  register.h  register.json  register.qrc
src/plugins/registration/: CMakeLists.txt  registration.cpp  registration.h  registration.json  registration.qrc
src/plugins/snake/: CMakeLists.txt  algo.cpp  algo.h  basic.frag  snake.cpp  snake.h  snake.json  snake_resources.qrc
src/plugins/stub/: CMakeLists.txt  stub.cpp  stub.h  stub.json  stub_resources.qrc
src/plugins/visualisenormals/: CMakeLists.txt  normals.gs.glsl  normals.vs.glsl  visualisenormals.cpp  visualisenormals.h  visualisenormals.json  vresources.qrc
src/pluginsystem/: CMakeLists.txt  core.cpp  core.h  export.h  iplugin.h  plugindeps.h  pluginmanager.cpp  pluginmanager.h
src/utilities/: CMakeLists.txt  compgeom.cpp  compgeom.h  cv.cpp  cv.h  export.h  lasso.cpp  lasso.h  picker.cpp  picker.h  pointpicker.cpp  pointpicker.h  util_resources.qrc  utils.cpp  utils.h
test/: CMakeLists.txt  main.cpp
tools/share/cmake/: FindGLEW.cmake  FindLeap.cmake  FindLibSVM.cmake  FindOpenCL.cmake  FindPCL.cmake  installtools.cmake
