#add_definitions(${QT_DEFINITIONS})
add_definitions(-DQT_PLUGIN)
add_definitions(-DQT_SHARED)

SET(LIBRARY_OUTPUT_PATH ${PLUGIN_OUTPUT_PATH})

add_subdirectory(brush3d)
add_subdirectory(lasso3d)
add_subdirectory(graphcut)
add_subdirectory(markov)
add_subdirectory(normalestimation)
add_subdirectory(visualisenormals)
add_subdirectory(eigenratio)
#add_subdirectory(snake)
add_subdirectory(flood)
#add_subdirectory(featureeval)
add_subdirectory(project)
add_subdirectory(outlierfilter)
add_subdirectory(radiusfilter)
#add_subdirectory(morphology)
#add_subdirectory(compare)
#add_subdirectory(register)
add_subdirectory(autotest)
#add_subdirectory(evaluate)
add_subdirectory(accuracy)
add_subdirectory(camerasetter)
#add_subdirectory(testfilter)
